--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://gitlab.com/priyanka_tst/koha-service#readme",
   "dependencies": {
+    "aws-sdk": "^2.1155.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
