--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "moment": "^2.29.4",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19",
-    "pdfkit": "^0.14.0"
+    "pdfkit": "^0.14.0",
+    "pdfkit-table": "^0.1.99",
+    "xlsx": "^0.18.5",
+    "xml": "^1.0.1"
   }
 }
